# geometric_burstiness

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.py
cmake/: FindEIGEN3.cmake  FindEigen3.cmake  FindFLANN.cmake
geoburst/: __init__.py  fast_spatial_matching.py  geometric_transforms.py
pyutil/: ransac_demo.py
src/: CMakeLists.txt  _fast_spatial_matching.cpp  build_partial_index.cc  compute_hamming_thresholds.cc  compute_index_weights.cc  compute_word_assignments.cc  fast_spatial_matching.h  geometric_transforms.h  hesaff_sift.h  hesaff_sift_to_binary_root_sift.cc  inverted_file.h  inverted_index.h  query.cc  ranking_schemes.h  structures.h
test/: test_fast_spatial_matching.py
